@@ -1,0 +1,16 @@
+"""
+Font definitions.
+"""
+
+# Default font
+FONT = 'sans 10'
+
+# Font for names of elements (such as classes)
+FONT_NAME = 'sans bold 10'
+
+# Abstract classes use this font for their name
+FONT_ABSTRACT_NAME = 'sans bold italic 10'
+
+# Small text, e.g. the (from ...) line in classes
+FONT_SMALL = 'sans 8'
+
