@@ -1,3 +1,8 @@
+2006-09-05  arjan <arjan at yirdis dot nl>
+
+        * gaphor/diagram/classifier.py, gaphor/diagram/klass.py: works
+        * gaphor/diagram/package.py: works
+
 2006-09-03  arjan <arjan at yirdis dot nl>
 
         * gaphor/diagram/classifier.py: cleanup
